# ml-intern-for-lex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: PROJECT_CHARTER.md  progress.md
src/ml_intern/: __init__.py  __main__.py  cli.py  commands.py  comparison_engine.py  comparison_rules.py  config.py  document_intake.py  jobs.py  main.py  repo_access.py  repo_scanner.py  report_builder.py  report_schemas.py  runner.py  schemas.py  security.py
src/ml_intern/routes/: __init__.py  configs.py  dashboard.py  jobs.py  report.py  repos.py
src/ml_intern/static/: index.html
src/ml_intern/static/css/: style.css
src/ml_intern/static/js/: app.js
tests/: conftest.py  test_api_report.py  test_api_repos.py  test_comparison_engine.py  test_document_intake.py  test_redaction.py  test_repo_access.py  test_repo_scanner.py  test_report_builder.py  test_report_schemas.py
