[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-intern"
version = "0.1.0"
description = "Companion dashboard and research sidecar for lex_study_foundation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "USER" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
ml-intern = "ml_intern.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_intern"]
# Hatchling includes all files (html, css, js) in the package directory by default.
# static/ lives inside src/ml_intern/ so it is automatically included in the wheel.

# ============================================================================
# Ruff
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ml_intern"]

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
